[tool.poetry]
name = "astrocast"
version = "0.2.1.3"
description = "Package to analyze calcium fluorescence events in astrocytes"
authors = ["Jan Philipp Reising <jan.reising@ki.se>", "Ana Cristina González"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
awkward = "*"
colorcet = "*"
opencv-python = "*"
czifile = "*"
dask = "*"
dask-image = "*"
datashader = "*"
dtaidistance = "*"
fastcluster = "*"
h5py = "*"
hdbscan = "*"
keras = "*"
matplotlib = "*"
multiprocess = "*"
networkx = "*"
pandas = "*"
napari = {extras = ["all"], version = "0.4.14"}
napari-plot = "*"
powerlaw = "*"
pynwb = "*"
deprecated = "*"
deprecation = "*"
jupyterlab = "*"
peakutils = "*"
holoviews = "*"
pointpats = "*"
psutil = "*"
ipyparallel = "*"
pytest = "*"
scipy = "*"
seaborn = "*"
scikit-image = "*"
scikit-learn = "*"
tensorflow = ">2.10"
tifffile = "*"
tiledb = "*"
tqdm = "*"
tsfresh = "*"
tslearn = "*"
umap-learn = "*"
xarray = "*"
xxhash = "*"
jnormcorre = "*"
numpy = "*"
humanize = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest-xdist = "*"

[tool.poetry.scripts]
#delta = 'astrocast.preparation:run_delta'
#motion-correction = 'astrocast.preparation:run_motion_correction'
#convert-input = 'astrocast.preparation:run_convert_input'
astrocast = 'astrocast.cli_interfaces:cli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
