[tool.poetry]
name = "astrocast"
version = "0.2.2.0"
description = "Package to analyze calcium fluorescence events in astrocytes"
authors = ["Jan Philipp Reising <jan.reising@ki.se>", "Ana Cristina González"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
awkward = "*"
colorcet = "*"
opencv-python = "*"
czifile = "*"
dask = "*"
dask-image = "*"
datashader = "*"
dtaidistance = "*"
fastcluster = "*"
h5py = "*"
hdbscan = "*"
keras = "*"
matplotlib = "*"
multiprocess = "*"
networkx = "*"
pandas = "*"
napari = {extras = ["all"], version = "0.4.14"}
napari-plot = "*"
powerlaw = "*"
pynwb = "*"
deprecated = "*"
deprecation = "*"
jupyterlab = "*"
peakutils = "*"
holoviews = "*"
pointpats = "*"
psutil = "*"
ipyparallel = "*"
pytest = "*"
scipy = "*"
seaborn = "*"
scikit-image = "*"
scikit-learn = "*"
tensorflow = ">2.10"
tifffile = "*"
tiledb = "*"
tqdm = "*"
tsfresh = "*"
tslearn = "*"
umap-learn = "*"
xarray = "*"
xxhash = "*"
numpy = "*"
humanize = "*"
pyyaml = "*"
colorama = "^0.4.6"
prettytable = "*"
shiny = "^0.5.1"
torch = "2.0.0"
jnormcorre = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest-xdist = "*"

[tool.poetry.scripts]
astrocast = 'astrocast.cli_interfaces:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
